--- a/config.json
+++ b/config.json
@@ -15,6 +15,30 @@
     {
       "name": "Bedroom off",
       "value": "bedroom_off"
+    },
+    {
+      "name": "Kitchen on",
+      "value": "kitchen_on"
+    },
+    {
+      "name": "Kitchen off",
+      "value": "kitchen_off"
+    },
+    {
+      "name": "WC on",
+      "value": "wc_on"
+    },
+    {
+      "name": "WC off",
+      "value": "wc_off"
+    },
+    {
+      "name": "Living room on",
+      "value": "living_on"
+    },
+    {
+      "name": "Living room off",
+      "value": "living_off"
     }
   ]
 }
