--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "ha-cli",
   "version": "1.0.0",
   "description": "Wrapper for IFTTT to control SONOFF devices via cli",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "start": "node src/index.js"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node --files' src/index.ts",
+    "build": "tsc -p .",
+    "start": "npm run build && node ./lib/index.js",
+    "global": "sudo -A npm install -g && ha-cli",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "test": "jest --config jest.config.json",
+    "prepare": "npm run build"
   },
   "bin": {
-    "ha-cli": "./src/index.js"
+    "ha-cli": "./lib/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,8 +37,20 @@
   },
   "homepage": "https://github.com/Kyczan/ha-cli#readme",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "jest": "^24.8.0"
+    "@types/clui": "^0.3.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/figlet": "^1.2.0",
+    "@types/inquirer": "^6.0.3",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.10",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -35,7 +58,6 @@
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "dotenv": "^8.0.0",
-    "esm": "^3.2.25",
     "figlet": "^1.2.3",
     "inquirer": "^6.4.1"
   }
